--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 <body>
 
   <div class="row min-vh-100 no-gutters">
-    <header class="col-12 col-lg-3 bg-dark text-light d-flex flex-column p-4 p-lg-3">
+    <header class="col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3">
       <h1 class="text-center">Taskmaster Pro Edition</h1>
-      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add
-        Task</button>
-      <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
-      <p class="mt-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
+      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">
+        Add Task
+      </button>
+      <button id="remove-tasks" class="btn btn-block btn-danger">
+        Delete All Tasks
+      </button>
+      <p class="mt-auto d-none d-lg-block ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas
+        architecto ipsa
         excepturi aut non
         laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
       </p>
@@ -29,7 +33,7 @@
         <!--to do start-->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header">
+            <h4 class="card-header bg-dark text-light">
               To Do
             </h4>
             <ul id="list-toDo" class="list-group list-group-flush">
@@ -44,7 +48,7 @@
         <!--in progress start-->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header">
+            <h4 class="card-header bg-dark text-light">
               In Progress
             </h4>
             <ul id="list-inProgress" class="list-group list-group-flush">
@@ -59,7 +63,7 @@
         <!-- in review start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header">
+            <h4 class="card-header bg-dark text-light">
               In Review
             </h4>
             <ul id="list-inReview" class="list-group list-group-flush">
@@ -74,18 +78,23 @@
         <!-- done start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-          <h4 class="card-header">
-            Done
-          </h4>
-          <ul id="list-done" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill">05/28/2020</span>
-              <p class="m-1">Sample task that's done</p>
-            </li>
-          </ul>
-        </div>
+            <h4 class="card-header bg-dark text-light">
+              Done
+            </h4>
+            <ul id="list-done" class="list-group list-group-flush">
+              <li class="list-group-item">
+                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                <p class="m-1">Sample task that's done</p>
+              </li>
+            </ul>
+          </div>
         </div>
         <!-- done end -->
+      </div>
+      <div id="trash">
+        <div class="w-100 bg-danger p-3 text-center text-light display-4 mt-auto">
+          Drop Here to Remove.
+        </div>
       </div>
     </main>
 
