--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@
             <h4 class="card-header bg-dark text-light">
               To Do
             </h4>
-            <ul id="list-toDo" class="list-group list-group-flush">
-              <li class="list-group-item">
-                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                <p class="m-1">Sample task to do</p>
-              </li>
-            </ul>
+            <ul id="list-toDo" class="list-group list-group-flush"></ul>
           </div>
         </div>
         <!--to do end-->
